# AG_DE_ZC_26

./: .gitignore  README.md
.oryx/: oryx-manifest.toml
04-analytics_engineering/: README.md
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  main.py  pipeline.py  pyproject.toml  zones.py
pipeline/flows/: 04_postgres.yaml  06_azure_kv.yaml  06_gcp_kv.yaml  07_gcp_setup.yaml  08_azure_taxi.yaml  09_azure_taxi_schedule.yml  09_gcp_taxi_scheduled.yaml
pipeline/scripts/: azure_transition.yaml
test/: file2.txt
