[project]
name = "001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
]